--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Cabin';
-    background-color: #758190;
+    background-color: white;
 }
 
 #tentacles {
@@ -21,6 +21,12 @@ body {
 
 .stats-container {
     display: flex;
+    align-items: center;
+    box-shadow: 0 0 30px lightblue;
+    cursor: pointer;
+    color: pink;
+    
+    
 }
 
 .stats-card {
